# conch

./: .envrc  .gitignore  .markdownlint-cli2.yaml  .pre-commit-config.yaml  CODEOWNERS  README.md  p1  pyproject.toml  requirements-common.txt  requirements-cuda-pytorch.txt  requirements-cuda.txt  requirements-rocm-pytorch.txt  requirements-rocm.txt  requirements-vllm.txt  setup.py
.github/: CODEOWNERS  pull_request_template.md
benchmarks/: bev_pool_backward_benchmark.py  bev_pool_benchmark.py  bnb_dequantize_blockwise_benchmark.py  bnb_quantize_blockwise_benchmark.py  copy_blocks_benchmark.py  flex_attention_vs_flash_benchmark.py  fused_add_rms_norm_benchmark.py  gelu_tanh_and_mul_benchmark.py  gemma_rms_norm_benchmark.py  mixed_precision_gemm_benchmark.py  nms_benchmark.py  paged_attention_benchmark.py  paged_attention_vs_flash_benchmark.py  reshape_and_cache_benchmark.py  rms_norm_benchmark.py  rotary_embedding_benchmark.py  scaled_gemm_benchmark.py  silu_and_mul_benchmark.py  static_scaled_fp8_quant_benchmark.py  static_scaled_int8_quant_benchmark.py  varlen_attention_benchmark.py  voxelization_benchmark.py
conch/: README.md  _version.py  envs.py  voxelization.py
conch/kernels/activation/: gelu_tanh_and_mul.py  silu_and_mul.py
conch/kernels/attention/: paged_attention.py  varlen_attention.py
conch/kernels/embedding/: rotary_embedding.py
conch/kernels/normalization/: gemma_rms_norm.py  rms_norm.py
conch/kernels/quantization/: __init__.py  fp8.py  gemm.py  int8.py
conch/kernels/quantization/bitsandbytes/: dequantize_blockwise.py  quantize_blockwise.py
conch/kernels/vision/: bev_pool.py  nms.py  quick_cumsum.py  voxelization.py
conch/kernels/vllm/: copy_blocks.py  reshape_and_cache.py
conch/ops/activation/: gelu_tanh_and_mul.py  silu_and_mul.py
conch/ops/attention/: paged_attention.py  varlen_attention.py
conch/ops/embedding/: rotary_embedding.py
conch/ops/normalization/: gemma_rms_norm.py  rms_norm.py
conch/ops/quantization/: fp8.py  gemm.py  int8.py
conch/ops/quantization/bitsandbytes/: functional.py
conch/ops/vision/: bev_pool.py  nms.py  quick_cumsum.py  voxelization.py
conch/ops/vllm/: copy_blocks.py  reshape_and_cache.py
conch/reference/activation/: gelu_tanh_and_mul.py  silu_and_mul.py
conch/reference/attention/: vllm_unified_attention.py
conch/reference/embedding/: rotary_embedding.py
conch/reference/normalization/: gemma_rms_norm.py  rms_norm.py
conch/reference/quantization/: fp8.py  int8.py  scaled_gemm.py
conch/reference/quantization/bitsandbytes/: dequantize_blockwise.py  quantize_blockwise.py
conch/reference/vision/: bev_pool.py  nms.py  quick_cumsum.py  voxelization.py
conch/reference/vllm/: copy_blocks.py  reshape_and_cache.py
conch/utils/: benchmark.py
conch_cuda_ext/: pyproject.toml  setup.py
conch_cuda_ext/ops/vision/bev_pool/: bev_pool.cc  bev_pool_kernel.cu
conch_cuda_ext/ops/vision/voxelization/: voxelization.cc  voxelization_kernel.cu
configuration/: direnv.sh
docs/conch/: cuda_extension.md  structure.md  triton.md
docs/conch/kernels/vision/: voxelization.md
docs/development/: contributing.md  coverage.md  linting.md
docs/distribution/: wheel.md
docs/getting_started/: developer_environment.md  installation.md
docs/performance/: bitsandbytes.md
docs/repo/: structure.md
env/: direnv.sh
scripts/: mypy.sh  run_benchmarks.sh
scripts/benchmarks/: collect_copy_blocks.sh  collect_paged_attention_vs_flash.sh  collect_reshape_and_cache.sh  collect_varlen_attention.sh  collect_varlen_attention_vllm.sh  run_all.sh
scripts/wheel/: build.sh
tests/: bev_pool_test.py  copy_blocks_test.py  dequantize_blockwise_test.py  fp8_quant_kernels_test.py  gelu_tanh_and_mul_test.py  gemma_rms_norm_test.py  int8_quant_kernels_test.py  mixed_precision_gemm_test.py  nms_test.py  paged_attention_test.py  prefill_attention_test.py  quantize_blockwise_test.py  quick_cumsum_test.py  reshape_and_cache_test.py  rms_norm_test.py  rotary_embedding_test.py  scaled_gemm_test.py  silu_and_mul_test.py  varlen_attention_test.py  voxelization_test.py
tools/: create_benchmark_results_table.py  mypy.sh  plot_benchmark_results.py
tools/benchmarks/: collect_bev_pool_bwd.sh  collect_bev_pool_fwd.sh  collect_copy_blocks.sh  collect_nms.sh  collect_paged_attention_vs_flash.sh  collect_reshape_and_cache.sh  collect_varlen_attention.sh  collect_varlen_attention_decode.sh  collect_varlen_attention_prefill.sh  run_all.sh
tools/env/: direnv.sh
tools/wheel/: build.sh
