[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "conch"
dynamic = ["version"]
authors = [
  { name="Jacob Manning", email="jmanning+oss@stackav.com" },
  { name="Ryan Hsu", email="rhsu+oss@stackav.com" },
]
description = "Triton kernel repository"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "Apache-2.0"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/stackav-oss/conch"
Issues = "https://github.com/stackav-oss/conch/issues"

[tool.hatch.version]
 path = "conch/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["conch"]

[tool.hatch.envs.default]
dependencies = [
   "numpy>=1.26.4",
   "setuptools>=40.8.0",
   "triton>=3.1.0",
   "torch>=2.5.1",
]

[tool.hatch.envs.benchmark]
dependencies = [
   "click>=8.1.8",
]

[tool.hatch.envs.test]
dependencies = [
   "einops>=0.8.0",
   "pytest>=8.3.4",
]

[tool.isort]
include_trailing_comma = true
line_length = 120
multi_line_output = 3
from_first = false

[tool.ruff.lint.per-file-ignores]
"benchmarks/**" = [
  "D103",    # Missing docstring in public function
  "FBT001",  # Boolean-typed positional argument in function definition
  "INP001",  # Implicit namespace package
  "PLR2004", # Magic value comparison
  "S101",    # Use of `assert` detected
  "T20",     # flake8-print
]
"conch/third_party/**" = [
  "D103",    # Missing docstring in public function
  "FBT001",  # Boolean-typed positional argument in function definition
  "FBT002",  # Boolean default positional argument in function definition
  "ICN001",  # Numpy import
  "INP001",  # Implicit namespace package
  "N801",    # Class name should use CapWords convention
  "N802",    # Function name should be lowercase
  "PT018",   # Assertion broken down into multiple parts
  "PLR1714", # Merging multiple comparisons
  "PLR2004", # Magic value comparison
  "RET504",  # Unnecessary assignment before `return`
  "RET505",  # Unnecessary `else` after `return`
  "S101",    # Use of `assert` detected
  "T20",     # flake8-print
]
"tests/**" = [
  "D103",    # Missing docstring in public function
  "FBT001",  # Boolean-typed positional argument in function definition
  "INP001",  # Implicit namespace package
  "PLR2004", # Magic value comparison
  "S101",    # Use of `assert` detected
  "T20",     # flake8-print
]
