# Copyright 2025 Stack AV Co.
# SPDX-License-Identifier: Apache-2.0

[build-system]
requires = ["setuptools>=42", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "conch-triton-kernels"
authors = [
  { name="Jacob Manning", email="jmanning+oss@stackav.com" },
  { name="Ryan Hsu", email="rhsu+oss@stackav.com" },
]
description = "Triton kernel repository"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "Apache-2.0"
license-files = ["LICEN[CS]E*"]
dynamic = ["dependencies", "optional-dependencies", "version"]

[project.urls]
Homepage = "https://github.com/stackav-oss/conch"
Issues = "https://github.com/stackav-oss/conch/issues"

[tool.isort]
include_trailing_comma = true
line_length = 120
multi_line_output = 3
from_first = false
use_parentheses = true

[tool.mypy]
explicit_package_bases = true
strict = true
exclude = [
  "build/",
  "conch/third_party/",
]

[[tool.mypy.overrides]]
module = ["conch.third_party.*"]
follow_imports = "skip"

[[tool.mypy.overrides]]
module = [
  "setuptools",
  "triton",
  "triton.language",
  "triton.language.extra",
]
follow_untyped_imports = true

[[tool.mypy.overrides]]
module = [
  "bitsandbytes.*",
  "vllm.*",
]
allow_untyped_calls = true
ignore_missing_imports = true
disable_error_code = "attr-defined"

[tool.setuptools.packages.find]
include = ["conch*"]
exclude = [
  "benchmarks*",
  "build*",
  "dist*",
  "docs*",
  "results*",
  "tests*",
  "tools*",
]

[tool.setuptools.dynamic]
version = {attr = "conch._version.__version__"}

[tool.ruff]
exclude = ["conch/third_party"]
line-length = 120

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
from-first = false
known-first-party = ["conch"]

[tool.ruff.lint.per-file-ignores]
"benchmarks/**" = [
  "D103",    # Missing docstring in public function
  "FBT001",  # Boolean-typed positional argument in function definition
  "INP001",  # Implicit namespace package
  "PLR2004", # Magic value comparison
  "S101",    # Use of `assert` detected
  "T20",     # flake8-print
]
"conch/third_party/**" = [
  "D103",    # Missing docstring in public function
  "FBT001",  # Boolean-typed positional argument in function definition
  "FBT002",  # Boolean default positional argument in function definition
  "ICN001",  # Numpy import
  "INP001",  # Implicit namespace package
  "N801",    # Class name should use CapWords convention
  "N802",    # Function name should be lowercase
  "PT018",   # Assertion broken down into multiple parts
  "PLR1714", # Merging multiple comparisons
  "PLR2004", # Magic value comparison
  "RET504",  # Unnecessary assignment before `return`
  "RET505",  # Unnecessary `else` after `return`
  "S101",    # Use of `assert` detected
  "T20",     # flake8-print
]
"tests/**" = [
  "D103",    # Missing docstring in public function
  "FBT001",  # Boolean-typed positional argument in function definition
  "INP001",  # Implicit namespace package
  "PLR2004", # Magic value comparison
  "S101",    # Use of `assert` detected
  "T20",     # flake8-print
]
